demo/webapp/cities/nyc.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nyc
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nyc
  template:
    metadata:
      labels:
        app: nyc
    spec:
      containers:
      - name: nyc
        image: containous/whoami
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: nyc
  namespace: webapp
  labels:
    app: nyc
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: nyc
  selector:
    app: nyc
