demo/webapp/cities/sfo.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sfo
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sfo
  template:
    metadata:
      labels:
        app: sfo
    spec:
      containers:
      - name: sfo
        image: containous/whoami
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: sfo
  namespace: webapp
  labels:
    app: sfo
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: sfo
  selector:
    app: sfo
